; ModuleID = '/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_fpm_conf.c_fpm_conf_ini_parser.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_fpm_conf.c_fpm_conf_ini_parser.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ZLOG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"[%s:%d] Unknown INI syntax\00", align 1
@ini_filename = common dso_local global i32 0, align 4
@ini_lineno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i32, i8*)* @fpm_conf_ini_parser to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fpm_conf_ini_parser(i32* %0, i32* %1, i32* %2, i32 %3, i8* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i8* %4, i8** %10, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %17

14:                                               ; preds = %5
  %15 = load i8*, i8** %10, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %18, label %17

17:                                               ; preds = %14, %5
  br label %48

18:                                               ; preds = %14
  %19 = load i8*, i8** %10, align 8
  %20 = bitcast i8* %19 to i32*
  store i32* %20, i32** %11, align 8
  %21 = load i32*, i32** %11, align 8
  %22 = load i32, i32* %21, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %18
  br label %48

25:                                               ; preds = %18
  %26 = load i32, i32* %9, align 4
  switch i32 %26, label %42 [
    i32 130, label %27
    i32 128, label %32
    i32 129, label %36
  ]

27:                                               ; preds = %25
  %28 = load i32*, i32** %6, align 8
  %29 = load i32*, i32** %7, align 8
  %30 = load i32*, i32** %11, align 8
  %31 = call i32 @fpm_conf_ini_parser_entry(i32* %28, i32* %29, i32* %30)
  br label %48

32:                                               ; preds = %25
  %33 = load i32*, i32** %6, align 8
  %34 = load i32*, i32** %11, align 8
  %35 = call i32 @fpm_conf_ini_parser_section(i32* %33, i32* %34)
  br label %48

36:                                               ; preds = %25
  %37 = load i32*, i32** %6, align 8
  %38 = load i32*, i32** %8, align 8
  %39 = load i32*, i32** %7, align 8
  %40 = load i32*, i32** %11, align 8
  %41 = call i32 @fpm_conf_ini_parser_array(i32* %37, i32* %38, i32* %39, i32* %40)
  br label %48

42:                                               ; preds = %25
  %43 = load i32, i32* @ZLOG_ERROR, align 4
  %44 = load i32, i32* @ini_filename, align 4
  %45 = load i32, i32* @ini_lineno, align 4
  %46 = call i32 @zlog(i32 %43, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %44, i32 %45)
  %47 = load i32*, i32** %11, align 8
  store i32 1, i32* %47, align 4
  br label %48

48:                                               ; preds = %17, %24, %42, %36, %32, %27
  ret void
}

declare dso_local i32 @fpm_conf_ini_parser_entry(i32*, i32*, i32*) #1

declare dso_local i32 @fpm_conf_ini_parser_section(i32*, i32*) #1

declare dso_local i32 @fpm_conf_ini_parser_array(i32*, i32*, i32*, i32*) #1

declare dso_local i32 @zlog(i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
